支持下载文件断点续传

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,32 @@
         android:text="download_file" />
 
     <Button
+        android:id="@+id/bt_cancel_request"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onViewClick"
+        android:text="cancel_request" />
+
+    <Button
         android:id="@+id/bt_clear_cache"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onViewClick"
         android:text="clear cache" />
+
+    <TextView
+        android:id="@+id/tv_tips1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tv_tips2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="14sp" />
 
 </LinearLayout>
